[gd_scene load_steps=7 format=2]

[ext_resource path="res://Interfaz.gd" type="Script" id=1]
[ext_resource path="res://Sprite/50x50/batmfa__.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprite/50x50/batmfo__.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 3 )

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Score_label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -181.297
margin_top = 111.098
margin_right = 188.703
margin_bottom = 251.098
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Mensajes" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.0
margin_top = -64.0
margin_right = 159.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Prueba"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -137.407
margin_top = -323.493
margin_right = 122.593
margin_bottom = -218.493
custom_fonts/font = SubResource( 3 )
text = "Comenzar"

[node name="Mensaje_timer" type="Timer" parent="."]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Mensaje_timer" to="." method="_on_Mensaje_timer_timeout"]
